--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "10.18.0",
     "graphql-tag": "2.12.6",
     "next": "14.0.4",
+    "qrcode.react": "3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.49.3",
