--- a/.github/workflows/graphql-deploy-apollo-studio.yaml
+++ b/.github/workflows/graphql-deploy-apollo-studio.yaml
@@ -37,11 +37,21 @@ jobs:
     runs-on: ubuntu-latest
     env:
       APOLLO_KEY: ${{ secrets.APOLLO_KEY }}
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+      SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID: ${{ secrets.SUPABASE_AUTH_EXTERNAL_GOOGLE_CLIENT_ID }}
+      SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET: ${{ secrets.SUPABASE_AUTH_EXTERNAL_GOOGLE_SECRET }}
+      SUPABASE_AUTH_EXTERNAL_GOOGLE_URL: ${{ secrets.SUPABASE_AUTH_EXTERNAL_GOOGLE_URL }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
     needs: filter
     if: needs.filter.outputs.graphql == 'true'
     steps:
       - name: checkout
         uses: actions/checkout@v4
+
+      - name: setup supabase cli
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
 
       - name: setup node
         uses: actions/setup-node@v3
@@ -67,6 +77,12 @@ jobs:
 
       - name: install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: authenticate to supabase
+        run: pnpm supabase link --project-ref ${{ secrets.SUPABASE_REFERENCE_ID }}
+
+      - name: start supabase
+        run: pnpm supabase start
 
       - name: generate graphql schema
         run: pnpm api generate && timeout 15 pnpm api dev
