--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -22,6 +22,8 @@
     "gql:introspect": "graphql-codegen --config codegen-introspect.ts -r dotenv/config"
   },
   "dependencies": {
+    "@ai-sdk/openai": "1.3.16",
+    "@ai-sdk/react": "1.2.9",
     "@hookform/resolvers": "3.3.4",
     "@lockerai/core": "workspace:*",
     "@lockerai/design-token": "workspace:*",
