--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -33,6 +33,7 @@
     "@supabase/auth-helpers-react": "0.5.0",
     "@supabase/supabase-js": "2.49.4",
     "@urql/next": "1.1.0",
+    "@vis.gl/react-google-maps": "1.5.2",
     "ai": "4.3.9",
     "dotenv": "16.3.1",
     "framer-motion": "10.18.0",
