--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -40,6 +40,7 @@
     "graphql-tag": "2.12.6",
     "marked": "15.0.8",
     "next": "14.0.4",
+    "next-intl": "4.1.0",
     "qrcode.react": "3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
