build: 📦️ (`api`) `graphql-type-json`を依存関係に追加した。(#24)

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -49,6 +49,7 @@
     "dataloader": "2.2.2",
     "dotenv": "16.3.1",
     "graphql-subscriptions": "2.0.0",
+    "graphql-type-json": "0.3.2",
     "graphql-upload": "15.0.2",
     "graphql-validation-complexity": "0.4.2",
     "langchain": "0.1.3",
@@ -63,6 +64,7 @@
     "@lockerai/tsconfig": "workspace:*",
     "@lockerai/type": "workspace:*",
     "@nestjs/schematics": "10.1.0",
+    "@types/graphql-type-json": "0.3.5",
     "@types/graphql-upload": "15.0.2",
     "@types/graphql-validation-complexity": "0.4.4",
     "@types/uuid": "9.0.7",
